[gd_scene load_steps=16 format=3 uid="uid://bcwvd3iqluysf"]

[ext_resource type="Script" path="res://objects/pterodactyl.gd" id="1_8kskb"]
[ext_resource type="Texture2D" uid="uid://d07imyi570keh" path="res://Sprites/Спрайт-0006-Sheet-Sheet.png" id="2_noiox"]
[ext_resource type="Script" path="res://objects/AnimatableBody2D.gd" id="2_vh826"]

[sub_resource type="Curve2D" id="Curve2D_d8fdu"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 28, 0, 0, 0, 0, 0, 460, 0)
}
point_count = 2

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_fibyh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3ahxu"]
atlas = ExtResource("2_noiox")
region = Rect2(0, 0, 2000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwv38"]
atlas = ExtResource("2_noiox")
region = Rect2(2000, 0, 2000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2pl2"]
atlas = ExtResource("2_noiox")
region = Rect2(4000, 0, 2000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_7wc3d"]
atlas = ExtResource("2_noiox")
region = Rect2(2000, 0, 2000, 1000)

[sub_resource type="SpriteFrames" id="SpriteFrames_4onlf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ahxu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwv38")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2pl2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7wc3d")
}],
"loop": true,
"name": &"default",
"speed": 7.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0fdhe"]
radius = 14.0
height = 113.827

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7r6m6"]
size = Vector2(114, 23.75)

[sub_resource type="Animation" id="Animation_aoyof"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_l6r0n"]
resource_name = "move"
length = 2.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(-1.56, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b5eda"]
_data = {
"RESET": SubResource("Animation_aoyof"),
"move": SubResource("Animation_l6r0n")
}

[node name="Pterodactyl" type="Path2D"]
position = Vector2(40, 0)
curve = SubResource("Curve2D_d8fdu")
script = ExtResource("1_8kskb")
loop = false
speed_scale = 0.6

[node name="PathFollow2D" type="PathFollow2D" parent="."]
position = Vector2(28, 0)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="PathFollow2D"]
remote_path = NodePath("../../AnimatableBody2D")

[node name="AnimatableBody2D" type="AnimatableBody2D" parent="."]
position = Vector2(28, 0)
physics_material_override = SubResource("PhysicsMaterial_fibyh")
script = ExtResource("2_vh826")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="AnimatableBody2D"]
position = Vector2(-8.91358, -3)
scale = Vector2(0.142, 0.142)
sprite_frames = SubResource("SpriteFrames_4onlf")
frame_progress = 0.549628

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatableBody2D"]
position = Vector2(1, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_0fdhe")

[node name="Area2D" type="Area2D" parent="AnimatableBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatableBody2D/Area2D"]
position = Vector2(1, 9)
shape = SubResource("RectangleShape2D_7r6m6")

[node name="Area2D2" type="Area2D" parent="AnimatableBody2D"]
position = Vector2(0.0864182, -13)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatableBody2D/Area2D2"]
position = Vector2(0.913582, 1.875)
shape = SubResource("RectangleShape2D_7r6m6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../PathFollow2D")
libraries = {
"": SubResource("AnimationLibrary_b5eda")
}

[connection signal="body_entered" from="AnimatableBody2D/Area2D" to="AnimatableBody2D" method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="AnimatableBody2D/Area2D2" to="AnimatableBody2D" method="_on_area_2d_2_body_entered"]
[connection signal="body_exited" from="AnimatableBody2D/Area2D2" to="AnimatableBody2D" method="_on_area_2d_2_body_exited"]
